<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_brown"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageViewMainThem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/imageViewMainPic"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textViewWellcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/textViewWellcome"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:hint="@string/editTextName"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/editTextPassword"
        android:inputType="textPassword"
        android:textSize="25sp" />

    <Button
        android:id="@+id/buttonCreateOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/buttonSend"
        android:textSize="25sp"
        android:background="@color/dark_brown"
        android:onClick="onClickCreateOrder"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>